# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fileencoding=utf-8 softtabstop=4 tabstop=4 expandtab:

2014-08-25 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add CloudI Service API functions to get the current configuration:
        * cloudi_service_api:acl/1
        * cloudi_service_api:logging/1

2014-08-22 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix old format for erlang terms in
      cloudi_service_api_requests (the new format changes broke it)
    * Update reltool_util
    * Add the option of starting a service with a release boot file
    * Add the boot file startup to the hello_world1 example

2014-08-21 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Small fixes for logging formatters usage
    * Move stdout/stderr external service logging output to the
      cloudi_core_i_services_external module

2014-08-20 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Small fixes for various logging test-cases
      (testing the logging formatters still remains)
    * Add cloudi_service_http_cowboy configuration argument
      websocket_name_unique to make sure only one connection Erlang pid
      represents a websocket service name
    * Fix cloudi_service_http_cowboy usage of non-default scope

2014-08-19 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Update the CloudI Service API to provide the following logging functions:
        * cloudi_service_api:logging_file_set/2
        * cloudi_service_api:logging_level_set/2
        * cloudi_service_api:logging_syslog_set/2
        * cloudi_service_api:logging_formatters_set/2
        * cloudi_service_api:logging_redirect_set/2
    * Deprecated the CloudI Service API functions:
        * cloudi_service_api:loglevel_set/2
        * cloudi_service_api:log_redirect/2

2014-08-18 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fixes to log formatters to allow multiple instances of the same
      output module
    * Add the cloudi_service_api:log_formatters/2 function to the